Switch to setup.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,3 +20,8 @@ exclude =
 max-complexity = 30
 # The GitHub editor is 127 chars wide
 max-line-length = 127
+
+[isort]
+profile = black
+line_length = 127
+src_paths = eagerx_ode
