--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest-cov = "^3.0.0"
 pytest-timeout = "^2.1.0"
 flake8= ">=3"
 flake8-bugbear = "^22.3.23"
+isort = ">=5.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
