--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,6 @@ flake8= ">=3"
 flake8-bugbear = "^22.3.23"
 isort = ">=5.0"
 
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+# [build-system]
+# requires = ["poetry-core>=1.0.0"]
+# build-backend = "poetry.core.masonry.api"
