--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,11 @@
 
 name: CI
 
-on: pull_request
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   test:
@@ -28,33 +32,13 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       #----------------------------------------------
-      #  -----  install & configure poetry  -----
+      #  -----  install dependencies  -----
       #----------------------------------------------
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-      #----------------------------------------------
-      #       load cached venv if cache exists
-      #----------------------------------------------
-      - name: Load cached venv
-        id: cached-poetry-dependencies
-        uses: actions/cache@v2
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
-      #----------------------------------------------
-      # install dependencies if cache does not exist
-      #----------------------------------------------
-      - name: Install dependencies
-        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction --no-root
-      #----------------------------------------------
-      # install your root project, if required
-      #----------------------------------------------
-      - name: Install library
-        run: poetry install --no-interaction
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install .[tests]
+
       #----------------------------------------------
       # check codestyle & lint
       #----------------------------------------------
@@ -64,22 +48,25 @@ jobs:
       - name: Lint with flake8
         run: |
           make lint
+      - name: Type check
+        run: |
+          make type
       #----------------------------------------------
       #  -----  install & configure ROS  -----
       #----------------------------------------------
-      - name: install ROS
-        run: |
-          sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
-          sudo apt install curl # if you haven't already installed curl
-          curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add -
-          sudo apt update
-          sudo apt install ros-noetic-ros-base
-          echo "source /opt/ros/noetic/setup.bash" >> .venv/bin/activate
-          sudo apt-get install ros-noetic-cv-bridge
-      #----------------------------------------------
-      #    add matrix specifics and run test suite
-      #----------------------------------------------
-      - name: Run tests
-        run: |
-          source .venv/bin/activate
-          make pytest
+      # - name: install ROS
+      #   run: |
+      #     sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
+      #     sudo apt install curl # if you haven't already installed curl
+      #     curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add -
+      #     sudo apt update
+      #     sudo apt install ros-noetic-ros-base
+      #     echo "source /opt/ros/noetic/setup.bash" >> .venv/bin/activate
+      #     sudo apt-get install ros-noetic-cv-bridge
+      # #----------------------------------------------
+      # #    add matrix specifics and run test suite
+      # #----------------------------------------------
+      # - name: Run tests
+      #   run: |
+      #     source .venv/bin/activate
+      #     make pytest
